--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   <section id="press">
     <div class="container-fluid">
-      <img class="press-logos" src="images/techCrunch.png" alt="tc-logo">
+      <img class="press-logos" src="images/TechCrunch.png" alt="tc-logo">
       <img class="press-logos" src="images/tnw.png" alt="tnw-logo">
       <img class="press-logos" src="images/bizinsider.png" alt="biz-insider-logo">
       <img class="press-logos" src="images/mashable.png" alt="mashable-logo">
