Project image update

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="image" property="og:image" content="Tindog.png">
   <meta charset="utf-8">
   <title>TinDog</title>
 
